# sauron

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  example.json  sauron.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Sauron.hs
src/Sauron/: App.hs  Cli.hs  Env.hs  Run.hs  Settings.hs  Top.hs
src/Sauron/Run/: Top.hs
src/Sauron/Top/: Client.hs  Json.hs  Model.hs  Tweet.hs  User.hs
test/: Spec.hs
test/Test/: Sauron.hs
test/Test/Sauron/: Top.hs
test/Test/Sauron/Top/: Client.hs  Tweet.hs
